--- a/AboutUs.html
+++ b/AboutUs.html
@@ -6,7 +6,12 @@
     <title>About Us</title>
 </head>
 <body>
-    <h1>About Me</h1>
+    <nav>
+        <ul>
+            <li><a href="#">About Me</a></li>
+            <li><a href="index.html">Home</a></li>
+        </ul>
+    </nav>
 <h2>MOHEBA SALEHI</h2>
 <p>I am learning <strong>Programming </strong><em>at</em><strong> Code To Inspire</strong>.</p>
 <hr>
