--- a/AboutUs.html
+++ b/AboutUs.html
@@ -12,7 +12,9 @@
             <li><a href="index.html">Home</a></li>
         </ul>
     </nav>
+    
 <h2>MOHEBA SALEHI</h2>
+    <h3>About Me</h3>
 <p>I am learning <strong>Programming </strong><em>at</em><strong> Code To Inspire</strong>.</p>
 <hr>
 <h2>Skills</h2>
